--- a/AKUN.yaml
+++ b/AKUN.yaml
@@ -1,5 +1,5 @@
 proxies:
-  - name: VIDIO BARU
+  - name: VIDIO exp17
     server: quiz.staging.vidio.com
     port: 80
     type: vmess
@@ -11,21 +11,7 @@ proxies:
     servername: 
     network: ws
     ws-opts:
-      path: /sshkit/Github/674f8d093307f/
+      path: /sshkit/Yupi/67591b7398648/
       headers:
         Host: lb.vhax.net
-    udp: true
-  - name: Howdy
-    type: vless
-    server: quiz.staging.vidio.com
-    port: 80
-    uuid: fd06fdb0-b5d5-11ef-9a8e-1239d0255272
-    cipher: auto
-    skip-cert-verify: true
-    tls: false
-    servername: sg3.socifiles.com
-    ws-opts:
-        path: /vlws
-        headers:
-           Host: sg3.socifiles.com
     udp: true
