--- a/AKUN.yaml
+++ b/AKUN.yaml
@@ -1,5 +1,5 @@
 proxies:
-  - name: VIDIO exp17
+  - name: VIDIO OPENWRT 26
     server: quiz.staging.vidio.com
     port: 80
     type: vmess
@@ -11,7 +11,7 @@ proxies:
     servername: 
     network: ws
     ws-opts:
-      path: /sshkit/Yupi/67591b7398648/
+      path: /sshkit/open/67640276aa50f/
       headers:
         Host: lb.vhax.net
     udp: true
